--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mdx-mermaid": "2.0.0-rc7",
     "next": "13.3.0",
     "next-mdx-remote": "^4.4.1",
+    "next-plausible": "^3.10.1",
     "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
